# Game-of-Life

./: .gitignore  README.md
src/: CMakeLists.txt  game.cpp  lifeGame.cpp
src/app/: CMakeLists.txt  gof_simulator.cpp  golMyFirstApp.cpp  golSimulator.cpp  still_lifes.cpp
src/lib/: CMakeLists.txt  FileManager.cpp  FileManager.h  GridStatus.cpp  GridStatus.h  LifeGame.cpp  LifeGame.h  gameException.cpp  gameException.h  gameExceptionMacro.h  golBasicTypes.cpp  golBasicTypes.h  golException.cpp  golException.h  golExceptionMacro.h
test/: CMakeLists.txt  gameCatchMain.cpp  gameCatchMain.h  gameCommandLineArgsTest.cpp  golBasicTest.cpp  golCatchMain.cpp  golCatchMain.h  test_data_structure.cpp  test_simulator.cpp  test_store_grid.cpp
